fixed styles layout bug

--- a/app/styles/layouts/crm/index.scss
+++ b/app/styles/layouts/crm/index.scss
@@ -17,7 +17,6 @@
 .crm-hero {
   width:100%;
   height:400px;
-  background:
 }
 
 .list-group-item {
